--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <title>First Web page</title>    
     </head>
     <body>
+         <style>
+            h1 {
+                color: blue;
+                text-align: center;
+            }
+                
+        </style>
         <h1>Hello World </h1>
     </body>
+
 </html>
